prusti-tests/tests/parse/ui/implies_fail.stderr
error: expected expression
 --> $DIR/implies_fail.rs:9:17
  |
9 | #[requires(true ==>)]
  |                 ^^^

error: unexpected binary operator
  --> $DIR/implies_fail.rs:12:12
   |
12 | #[requires(==> true)]
   |            ^^^

error: aborting due to 2 previous errors

